# PQMagic

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  README_EN.md
hash/sm3/: sm3_extended.c
include/: pqmagic_api.h  pqmagic_config.h  pqmagic_hash.h  sm3_extended.h
kem/aigis-enc/std/: CMakeLists.txt  align.h  cbd.c  config.h  kem.c  polyvec.c
kem/aigis-enc/std/test/: test_speed.c
kem/kyber/std/: CMakeLists.txt
kem/kyber/std/test/: test_kyber.c  test_speed.c
kem/ml_kem/std/: CMakeLists.txt
kem/ml_kem/std/test/: test_ml_kem.c  test_speed.c
sig/aigis-sig/std/: CMakeLists.txt  sign.c  sign.h
sig/aigis-sig/std/test/: test_aigis.c  test_speed.c  test_vec_aigis_sig.c
sig/dilithium/std/: CMakeLists.txt
sig/ml_dsa/std/: CMakeLists.txt  sign.c
sig/slh_dsa/std/: CMakeLists.txt  fors.c
sig/sphincs-a/std/: CMakeLists.txt  config.h
utils/: CMakeLists.txt  cpucycles.h
